--- a/studentprojectMVC/Views/Record/List.cshtml
+++ b/studentprojectMVC/Views/Record/List.cshtml
@@ -1,85 +1,99 @@
-﻿@*<div id="recordDiv">
+﻿@model RecordsListViewModel
+
+@*<div id="recordDiv">
 
 
-</div>
+    </div>
 
-@section scripts{
+    @section scripts{
 
-    <script>
+        <script>
 
-        $(document).ready(function () {
-            LoadMoreRecords();
-        });
-
-        $(window).scroll(function () {
-            if ($(window).scrollTop() == $(document).height() - $(window).height()) {
+            $(document).ready(function () {
                 LoadMoreRecords();
-            }
-        });
+            });
 
-        function LoadMoreRecords() {
-
-            $.ajax({
-                type: 'GET',
-                url: '/api/RecordData',
-                dataType: 'json',
-                success: function (jsonData) {
-                    if (jsonData == null) {
-                        alert('no data returned');
-                        return;
-                    }
-
-                    $.each(jsonData, function (index, record) {
-
-                        var RecordSummarString = '<div class="col-sm-4 col-lg-4 col-md-4"> ' +
-                                              '  <div class="thumbnail">' +
-                                              '     <img src="' + record.imageThumbnailUrl + '" alt="">' +
-                                              '      <div class="caption">' +
-                                              '         <h3 class="pull-right">' + record.price + '</h3>' +
-                                              '         <h3>' +
-                                              '             <a href=/Record/Details/' + record.recordId + '>' + record.title + '</a>' +
-                                              '         </h3>' +
-                                              '         <p>' + record.shortDescription + '</p>' +
-                                              '    </div>' +
-                                              '    <div class="addToCart">' +
-                                              '        <p class="button">' +
-                                              '             <a class="btn btn-primary" href=/ShoppingCart/AddToShoppingCart?recordId=' + record.recordId + '>Add to cart</a>' +
-                                              '         </p>' +
-                                              '     </div>' +
-                                              '  </div>' +
-                                              '</div>';
-
-                        $('#recordDiv').append(RecordSummarString);
-                    });
-                },
-                error: function (ex) {
-                    alert(ex);
+            $(window).scroll(function () {
+                if ($(window).scrollTop() == $(document).height() - $(window).height()) {
+                    LoadMoreRecords();
                 }
             });
-            return false;
-        }
-    </script>
 
-}*@
+            function LoadMoreRecords() {
 
+                $.ajax({
+                    type: 'GET',
+                    url: '/api/RecordData',
+                    dataType: 'json',
+                    success: function (jsonData) {
+                        if (jsonData == null) {
+                            alert('no data returned');
+                            return;
+                        }
 
+                        $.each(jsonData, function (index, record) {
 
+                            var RecordSummarString = '<div class="col-sm-4 col-lg-4 col-md-4"> ' +
+                                                  '  <div class="thumbnail">' +
+                                                  '     <img src="' + record.imageThumbnailUrl + '" alt="">' +
+                                                  '      <div class="caption">' +
+                                                  '         <h3 class="pull-right">' + record.price + '</h3>' +
+                                                  '         <h3>' +
+                                                  '             <a href=/Record/Details/' + record.recordId + '>' + record.title + '</a>' +
+                                                  '         </h3>' +
+                                                  '         <p>' + record.shortDescription + '</p>' +
+                                                  '    </div>' +
+                                                  '    <div class="addToCart">' +
+                                                  '        <p class="button">' +
+                                                  '             <a class="btn btn-primary" href=/ShoppingCart/AddToShoppingCart?recordId=' + record.recordId + '>Add to cart</a>' +
+                                                  '         </p>' +
+                                                  '     </div>' +
+                                                  '  </div>' +
+                                                  '</div>';
 
-@*@model RecordsListViewModel
+                            $('#recordDiv').append(RecordSummarString);
+                        });
+                    },
+                    error: function (ex) {
+                        alert(ex);
+                    }
+                });
+                return false;
+            }
+        </script>
 
-    @ViewBag.CurrentGenre
-    @foreach (var record in Model.Records)
-    {
-        @Html.Partial("_RecordCard", record)
     }*@
 
 
-@model RecordsListViewModel
+
+@*@ViewBag.CurrentGenre*@
+@*foreach (var record in Model.Records)
+    {
+        //@Html.Partial("_RecordCard", record)
+    }*@
 
 
-    <h1>@Model.CurrentGenre</h1>
 
-    @foreach (var record in Model.Records)
+
+<h1>@Model.CurrentGenre</h1>
+
+@foreach (var record in Model.Records){ 
+
+    <partial name="_RecordCard" model="record" />
+
+ }
+
+@*if (record.Genre == Model.CurrentGenre)
     {
         <partial name="_RecordCard" model="record" />
-    }
+    }*@
+
+@*@foreach (var record in Model.CurrentGenre)
+    {
+        <partial name="_RecordCard" model="record" />
+    }*@
+
+@*if (record.Genre == Model.CurrentGenre)
+    {
+
+    }*@
